issue#3 cards overlapping

--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -35,3 +35,6 @@ page-home {
     text-align:center;
     margin: 30px auto 0;
 }
+.reactButton{
+  height:40px;
+}
